# ox_task

./: .gitignore  README.org  README.rst  makefile  pyproject.toml  tasks.json
src/ox_task/: __init__.py
src/ox_task/core/: comm_utils.py  finders.py  models.py  noters.py  planning.py  processing.py  shell_tools.py
src/ox_task/example_tasks/: simple_tasks.py
src/ox_task/ui/: __init__.py  cli.py  old_cli.py
tests/: conftest.py  test_basics.py
