[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ox_task"
version = "0.1.0"
description = "A brief description of your project"
readme = "README.rst"
license = {text = "GPL-3.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pylint",
    "pytest",
    "ruff",
]

[project.scripts]
ox_task = "ox_task.ui.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ox_task"
Repository = "https://github.com/yourusername/ox_task"
Issues = "https://github.com/yourusername/ox_task/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"